--- a/package.json
+++ b/package.json
@@ -4,14 +4,15 @@
 	"description": "cit eslint 代码规范",
 	"main": "index.js",
 	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1"
+		"test": "eslint test.js"
 	},
 	"repository": {
 		"type": "git",
 		"url": "git+https://github.com/yujingxiacai/eslint-config-cit-yukang.git"
 	},
 	"keywords": [
-		"eslint-config-cit"
+		"eslint-config",
+		"eslint-config-yuuu"
 	],
 	"author": "yujingxiacai <shenyukang@126.com> (https://github.com/yujingxiacai)",
 	"license": "MIT",
